[package]
name = "qwer"
# Do not touc the version number
# It will be changed dynamically by the CI
version = "0.0.0"
edition = "2021"
description = "Prints out Hello World!"
authors = ["Jan Bronicki janbronicki@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serialport = "4.2.1"


[dev-dependencies]
